Control - Release1 finished

--- a/SWE 2/ST-Comm_Spring/src/main/resources/public/accountactivationError.html
+++ b/SWE 2/ST-Comm_Spring/src/main/resources/public/accountactivationError.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>ST-Comm</title>
+<title>Account activation</title>
 </head>
 <body>
-<b>Sorry, activation link is either wrong or expired!!</b>
+<b><font size="5">Sorry, activation link is either wrong or expired!!</font></b>
+<br/><br/>Please do not use this link if your account is already active
 </body>
 </html>
