--- a/SWE 2/AngularJs/WebContent/signUp.html
+++ b/SWE 2/AngularJs/WebContent/signUp.html
@@ -23,7 +23,7 @@
         <div id="paragraph">
             <h2>Create Your Own Account</h2><br>
             <p>Your account is your portal to all things 
-                <br>in (websiteName): your courses and games
+                <br>in ST-Comm : your courses and games
             </p>
         </div>
         
