--- a/SWE 2/AngularJs/WebContent/signIn.html
+++ b/SWE 2/AngularJs/WebContent/signIn.html
@@ -24,7 +24,7 @@
         <div id="paragraph">
             <h2>Sign Into Your Account</h2><br>
             <p>Your account is your portal to all things 
-                <br>in (websiteName): your courses and games
+                <br>in ST-Comm : your courses and games
             </p>
         </div>
         
