--- a/SWE 2/AngularJs/WebContent/signUp.html
+++ b/SWE 2/AngularJs/WebContent/signUp.html
@@ -44,10 +44,10 @@
             <div class="row">
                 <div class="col-lg-6">
                     Male <input type="radio" name = "gender" value="male" id="male" 
-                    	ng-model="gender" required checked/>
+                    	ng-model="gender" checked/>
                 </div>
                 <div class="col-lg-6">
-                    Female <input type="radio" name="gender" value="female" id="female" required/>
+                    Female <input type="radio" name="gender" value="female" id="female" ng-model="gender"/>
                 </div>
             </div>
             <div class="row">
@@ -67,10 +67,10 @@
             <div class="row">
                 <div class="col-lg-6">
                     Teacher <input type="radio" name ="type" value="teacher" id="teacher" 
-                    ng-model="type" required/>
+                    ng-model="type"/>
                 </div>
                 <div class="col-lg-6">
-                    Student <input type="radio" name="type" value="student" id="student" checked/>
+                    Student <input type="radio" name="type" value="student" id="student" ng-model="type" checked />
                 </div>
             </div>
             
