--- a/SWE 2/AngularJs/WebContent/signIn.html
+++ b/SWE 2/AngularJs/WebContent/signIn.html
@@ -8,6 +8,8 @@
     <script src="JS/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="JS/jsSignIn.js" ></script>
     <script src="JS/bootstrap.min.js"></script>
+    
+    <link rel="icon" href="logo.png" type="image/x-icon">
     <title>Sign In</title>
 </head>
 <body>
@@ -43,7 +45,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <input type="submit" value="SIGN IN" id="SignIn" />
+                    <input type="submit" value="SIGN IN" id="SignIn" class="btn btn-default"/>
                 </div>
             </div>
         </form>
