--- a/SWE 2/AngularJs/WebContent/games.html
+++ b/SWE 2/AngularJs/WebContent/games.html
@@ -7,15 +7,32 @@
 	<script src="JS/jquery-3.1.1.min.js"></script>
 	<script src="JS/bootstrap.min.js"></script>
 	<script src="JS/jsGames.js"></script>
+	
+	<link rel="icon" href="logo.png" type="image/x-icon">
     <title>games</title>
 </head>
 <body >
     <div class="container">
         <div ng-controller="ctrl">
+        	<nav class="navbar navbar-inverse">
+              <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">ST-Comm</a>
+                  <a class="navbar-brand" href="#"><img src="logo.png" id="img1"/></a>
+                </div>
+                <ul class="nav navbar-nav">
+                  <li id="home" ><a href="home.html">Home</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#">{{username}}</a></li>
+                  <li id="signOut"><a href="#">Sign out</a></li>
+                </ul>
+              </div>
+            </nav>
             <div class="row">
                 <div class="col-xs-6 col-md-4 col-lg-3" ng-repeat="game in games">
                     <center><div class="thumbnail">
-                        <img src="">
+                        <img src="logo.png">
                         <div class="caption">
                             <center><h3>{{game}}</h3></center>
                             <center>
@@ -35,6 +52,11 @@
                                     <h4 class="modal-title" id ="questionNum"></h4>
                                 </div>
                                 <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <center><h3>{{gameName}}</h3></center>
+                                        </div>
+                                    </div>
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <center><h3 id="score"></h3></center>
