semi final AngularJS (except create game service)

--- a/SWE 2/AngularJs/WebContent/index.html
+++ b/SWE 2/AngularJs/WebContent/index.html
@@ -11,9 +11,6 @@
     <title>ST_Comm</title>
 </head>
 <body>
-    <!--<form action="signIn.html">
-        <input type="submit" value="Join Community" id="join" />
-    </form>-->
 	<div class="container">
     	<nav class="navbar navbar-inverse">
     	    <div class="container-fluid">
@@ -29,6 +26,76 @@
                 </ul>
         	</div>
     	</nav>
+        <div class="row">
+            <div class="col-lg-12">
+                <center><h1 id="t">Discover what ST-Comm can do for you</h1></center> 
+            </div>
+        </div>
+        <br><br><br><br>
+        <div class="row">
+            <div class="col-lg-6 col-xs-6">
+                <img src="Teacher.png" id="pic1"/>
+            </div>
+            <div class="col-lg-6 col-xs-6">
+                <br>
+                <div class="row">
+                    <div class="col-lg-6 col-xs-6" id="headline1">
+                        Add courses to your students
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 col-xs-6" id="paragraph1">
+                        <br><br>
+                        If you are a teacher, you can add new courses in any field you want. you can add educational games to any courses you created.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
+        <div class="row">
+            <div class="col-lg-6 col-xs-6">
+                <br>
+                <div class="row">
+                    <div class="col-lg-6 col-xs-6" id="headline2">
+                        Play and learn
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 col-xs-6" id="paragraph2">
+                        <br><br>
+                        Enroll in the courses you like for free, and you will enjoy several types of educational and interesting games. Challenge yourself to achieve best scores.
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xs-6">
+                <img src="Play.jpg" id="pic2"/>
+            </div>
+        </div>
+        <br>
+    	<div id="footer">
+            <br>
+            <div class="row">
+                <div class="col-lg-12 col-xs-12" id="contact">
+                    <center>Contact Us</center>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-lg-12 col-xs-12" id="paragraph3">
+                    <center>If you have a question, we have an answer. <br>If you need something,
+                            we'll help you. Contact us anytime.</center>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-lg-12 col-xs-12">
+                    <center>
+                        <input type="button" class="btn btn-default" value="Contact us now" id="contactButton"/>
+                    </center>
+                </div>
+            </div>
+            <br>
+        </div>
 	</div>  
 </body>
 </html>
