--- a/SWE 2/AngularJs/WebContent/congratulation.html
+++ b/SWE 2/AngularJs/WebContent/congratulation.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" href="logo.png" type="image/x-icon">
     <title>congratulation</title>
 </head>
 <body>
-    verfication mail was sent 
-
+    <center>verfication mail was sent.</center> 
 </body>
 </html>
