--- a/SWE 2/AngularJs/WebContent/home.html
+++ b/SWE 2/AngularJs/WebContent/home.html
@@ -31,7 +31,6 @@
                 </ul>
               </div>
             </nav>
-        	<!--<input type="button" id="allCourses" value="allCourses" ng-click="getAllCourses()"/>-->
         	
         	
         	<div class="row">
@@ -45,9 +44,6 @@
                         <input type="button" id="createGame" value="createGame" class="btn btn-default" data-toggle="modal" data-target="#myModal2"/>
                     </center>
                 </div>
-                <!--<div class="col-lg-4">
-                    <center><input type="submit" value="Sign Out" id="signOut" class="btn btn-default"/></center>
-                </div>-->
             </div>
             <br>
             <div class="row">
@@ -95,6 +91,11 @@
                                         </div>
                                     </div>
                                     <div class="row">
+                						<div class="col-lg-12 col-xs-12">
+                    						<p id="nameExists">Course name is already exist</p>
+                						</div>
+            						</div>
+                                    <div class="row">
                                         <div class="col-lg-12">
                                             <center>
                                                 <input type="submit" class="btn btn-default" id="addCourse" value="Add New Course"/>
@@ -130,7 +131,19 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-12">
+                                            <center><p id="invalidCourseName">Course name is already exist</p></center>
+                                            <br>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-12">
                                             <center><input id="gameName"  placeholder="Game Name*" required/></center>
+                                            <br>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <center><p id="invalidGameName">Game name is already exist</p></center>
                                             <br>
                                         </div>
                                     </div>
@@ -193,24 +206,24 @@
                                         <br>
                                     </div>
                                 </div>
-                                <div id="mcqChoices">
+                                <div>
                                     <div class="row">
                                         <center>
-                                            <div class="col-lg-6">
-                                                <input id="mcq1" placeholder="choice1"/>
+                                            <div class="col-lg-6 col-xs-6 col-md-6">
+                                                <input id="mcq1" placeholder="choice1*"/>
                                             </div>
-                                            <div class="col-lg-6">
-                                                <input id="mcq2" placeholder="choice2"/>
+                                            <div class="col-lg-6 col-xs-6 col-md-6">
+                                                <input id="mcq2" placeholder="choice2*"/>
                                             </div>
                                         </center>
                                     </div>
                                     <br>
                                     <div class="row">
                                         <center>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-6 col-xs-6 col-md-6">
                                                 <input id="mcq3" placeholder="choice3"/>
                                             </div>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-6 col-xs-6 col-md-6">
                                                 <input id="mcq4" placeholder="choice4"/>
                                             </div>
                                         </center>
@@ -222,6 +235,12 @@
                                         <center>
                                             <input id="answer" required placeholder="Correct Answer*"/>
                                         </center>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <center><p id="invalidAnswer">answer doesn"t match any choice !</p></center>
                                     </div>
                                 </div>
                                 <div class="row">
