--- a/SWE 2/AngularJs/WebContent/signIn.html
+++ b/SWE 2/AngularJs/WebContent/signIn.html
@@ -44,6 +44,11 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-12 col-xs-12">
+                    <p id="errorMsg">Invailed password or username</p>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-12">
                     <input type="submit" value="SIGN IN" id="SignIn" class="btn btn-default"/>
                 </div>
