--- a/SWE 2/AngularJs/WebContent/signUp.html
+++ b/SWE 2/AngularJs/WebContent/signUp.html
@@ -337,6 +337,11 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-12 col-xs-12">
+                    <p id="errorMsg">Invailed username</p>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-12">
                     <input type="submit" value="SIGN UP" id="SignUp" class="btn btn-default"/>
                 </div>
