--- a/SWE 2/AngularJs/WebContent/signUp.html
+++ b/SWE 2/AngularJs/WebContent/signUp.html
@@ -338,7 +338,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 col-xs-12">
-                    <p id="errorMsg">Invailed username</p>
+                    <p id="errorMsg">Username or Email already exists !</p>
                 </div>
             </div>
             <div class="row">
