--- a/SWE 2/AngularJs/WebContent/index.html
+++ b/SWE 2/AngularJs/WebContent/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html ng-app="main">
+<head >
     <link rel="stylesheet" type="text/css" href="CSS/bootstrap.min.css" />
+    <script src="lib/angular.min.js"></script>
     <script src="JS/jquery-3.1.1.min.js"></script>
     <script src="JS/bootstrap.min.js"></script>
     <script type="text/javascript" src="JS/jsIndex.js" ></script>
@@ -11,7 +12,7 @@
     <title>ST_Comm</title>
 </head>
 <body>
-	<div class="container">
+	<div class="container" ng-controller="ctrl">
     	<nav class="navbar navbar-inverse">
     	    <div class="container-fluid">
                 <div class="navbar-header">
@@ -90,11 +91,53 @@
             <div class="row">
                 <div class="col-lg-12 col-xs-12">
                     <center>
-                        <input type="button" class="btn btn-default" value="Contact us now" id="contactButton"/>
+                        <input type="button" class="btn btn-default" value="Contact us now" id="contactButton" data-toggle="modal" data-target="#myModal"/>
                     </center>
                 </div>
             </div>
             <br>
+            <div id="contactForm" >
+                <form ng-submit="sendMsg()">
+                	<input type="hidden" id="apikey" name="apikey" value="3658913e-3875-4480-abe4-b54bc00576b5"/>
+                	<input type="hidden" id="to" name="to" value="stcomm.education@gmail.com"/>
+                	<input type="hidden" id="isTransactional" name="isTransactional" value="true"/>
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <center><h4 class="modal-title">Contact Form</h4></center>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <center><input placeholder="subject*" required id="subject" ng-model="subject"/></center>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <center><input type="email" placeholder="email*" required id="email" ng-model="email"/></center>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <center><textarea rows="5" cols="50" placeholder="message*" required id="message" ng-model="msg"></textarea></center>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <center><input type="submit" value="Send message" class="btn btn-default"/></center>
+                                        </div>
+                                    </div>
+                               </div>
+                          </div>
+                      </div>
+                  </div>
+              </form>
+          </div>
         </div>
 	</div>  
 </body>
