--- a/SWE 2/AngularJs/WebContent/home.html
+++ b/SWE 2/AngularJs/WebContent/home.html
@@ -165,7 +165,7 @@
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <input type="button" class="cancelCreateGame btn btn-default" value="cancel" data-dismiss="modal"/>
+                                    <input type="button" id="cancelCreateGame" class="btn btn-default" value="cancel" data-dismiss="modal"/>
                                 </div>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="cancelCreateGame btn btn-default" data-dismiss="modal" >Cancel</button>
+                                <button type="button" id="cancelCreateGame " class=" btn btn-default" data-dismiss="modal" >Cancel</button>
                             </div>
                           </div>
 
