add id for choices

--- a/SWE 2/AngularJs/WebContent/games.html
+++ b/SWE 2/AngularJs/WebContent/games.html
@@ -72,7 +72,7 @@
                                     <div class="row">
                                         <div class="col-lg-3" ng-repeat="choice in choices">
                                             <center>
-                                                <div ><input type="radio" value={{choice}}
+                                                <div ><input type="radio" value={{choice}} id={{choice}}
                                                 name="choices" checked/>{{choice}}</div>
                                             </center>
                                         </div>
