javadoc added to DBModel

--- a/SWE 2/AngularJs/WebContent/index.html
+++ b/SWE 2/AngularJs/WebContent/index.html
@@ -98,6 +98,9 @@
             <br>
             <div id="contactForm" >
                 <form ng-submit="sendMsg()">
+                	<input type="hidden" id="apikey" name="apikey" value="3658913e-3875-4480-abe4-b54bc00576b5"/>
+                	<input type="hidden" id="to" name="to" value="stcomm.education@gmail.com"/>
+                	<input type="hidden" id="isTransactional" name="isTransactional" value="true"/>
                     <div class="modal fade" id="myModal" role="dialog">
                         <div class="modal-dialog">
                             <div class="modal-content">
