--- a/Phase 2/AngularJs/WebContent/games.html
+++ b/Phase 2/AngularJs/WebContent/games.html
@@ -9,24 +9,32 @@
 	<script src="JS/jsGames.js"></script>
 	
 	<link rel="icon" href="logo.png" type="image/x-icon">
-    <title>games</title>
+    <title>Games</title>
 </head>
-<body >
+<body onload="check()">
     <div class="container">
         <div ng-controller="ctrl">
         	<nav class="navbar navbar-inverse">
               <div class="container-fluid">
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		                <span class="sr-only">Toggle navigation</span>
+		                <span class="icon-bar"></span>
+		                <span class="icon-bar"></span>
+		                <span class="icon-bar"></span>
+		              </button>
                     <a class="navbar-brand" href="#">ST-Comm</a>
-                  <a class="navbar-brand" href="#"><img src="logo.png" id="img1"/></a>
+                  	<a class="navbar-brand" href="#"><img src="logo.png" id="img1"/></a>
                 </div>
-                <ul class="nav navbar-nav">
-                  <li id="home" ><a href="home.html">Home</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#">{{username}}</a></li>
-                  <li id="signOut"><a href="#">Sign out</a></li>
-                </ul>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	                <ul class="nav navbar-nav">
+	                  <li id="home" ><a href="home.html">Home</a></li>
+	                </ul>
+	                <ul class="nav navbar-nav navbar-right">
+	                  <li><a href="#">{{username}}</a></li>
+	                  <li id="signOut"><a href="#">Sign out</a></li>
+	                </ul>
+	              </div>
               </div>
             </nav>
             <div class="row">
@@ -72,9 +80,15 @@
                                     <div class="row">
                                         <div class="col-lg-3" ng-repeat="choice in choices">
                                             <center>
-                                                <div ><input type="radio" value={{choice}} id={{choice}}
-                                                name="choices" checked/>{{choice}}</div>
+                                                <div ><input type="radio" value={{choice}}
+                                                name="choices" checked id={{choice}}/>{{choice}}</div>
                                             </center>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                    	<br>
+                                        <div class="col-lg-12">
+                                        	<p id="time"></p>
                                         </div>
                                     </div>
                                     <div class="row">
