--- a/Phase 3/AngularJs/WebContent/index.html
+++ b/Phase 3/AngularJs/WebContent/index.html
@@ -16,15 +16,23 @@
     	<nav class="navbar navbar-inverse">
     	    <div class="container-fluid">
                 <div class="navbar-header">
+                	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	                <span class="sr-only">Toggle navigation</span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	              </button>
                     <a class="navbar-brand" href="#">ST-Comm</a>
-                  <a class="navbar-brand" href="#"><img src="logo.png" id="img1"/></a>
+                  	<a class="navbar-brand" href="#"><img src="logo.png" id="img1"/></a>
                 </div>
-                <ul class="nav navbar-nav">
-                  <li><a href="#">Home</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <li id="join"><a href="signIn.html">Join</a></li>
-                </ul>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	                <ul class="nav navbar-nav">
+	                  <li><a href="#">Home</a></li>
+	                </ul>
+	                <ul class="nav navbar-nav navbar-right">
+	                  <li id="join"><a href="signIn.html">Join</a></li>
+	                </ul>
+        		</div>
         	</div>
     	</nav>
         <div class="row">
@@ -98,9 +106,6 @@
             <br>
             <div id="contactForm" >
                 <form ng-submit="sendMsg()">
-                	<input type="hidden" id="apikey" name="apikey" value="3658913e-3875-4480-abe4-b54bc00576b5"/>
-                	<input type="hidden" id="to" name="to" value="stcomm.education@gmail.com"/>
-                	<input type="hidden" id="isTransactional" name="isTransactional" value="true"/>
                     <div class="modal fade" id="myModal" role="dialog">
                         <div class="modal-dialog">
                             <div class="modal-content">
