AngularJS release1 without copy service

--- a/Phase 3/AngularJs/WebContent/home.html
+++ b/Phase 3/AngularJs/WebContent/home.html
@@ -100,7 +100,7 @@
                                     </div>
                                     <div class="row">
                 						<div class="col-lg-12 col-xs-12">
-                    						<p id="nameExists">Course name is already exist</p>
+                    						<p id="nameExists">Course name is already exists</p>
                 						</div>
             						</div>
                                     <div class="row">
