--- a/Phase 3/AngularJs/WebContent/home.html
+++ b/Phase 3/AngularJs/WebContent/home.html
@@ -159,7 +159,7 @@
                                         <div class="col-lg-12">
                                             <center>
                                                 Number Of Questions <input type="number" id="numOfQuestions" 
-                                                min="1" max="40" value="1"/>
+                                                min="1" max="40" value="1" required/>
                                             </center>
                                             <br>
                                         </div>
@@ -218,10 +218,10 @@
                                     <div class="row">
                                         <center>
                                             <div class="col-lg-6 col-xs-6 col-md-6">
-                                                <input id="mcq1" placeholder="choice1*"/>
+                                                <input id="mcq1" placeholder="choice1*" required/>
                                             </div>
                                             <div class="col-lg-6 col-xs-6 col-md-6">
-                                                <input id="mcq2" placeholder="choice2*"/>
+                                                <input id="mcq2" placeholder="choice2*" required/>
                                             </div>
                                         </center>
                                     </div>
@@ -249,7 +249,7 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <center>
-                                            Time : <input type="number" id="time" min="2" value="2"/> secs
+                                            Time : <input type="number" id="time" min="2" value="2" required/> secs
                                         </center>
                                     </div>
                                 </div>
