more restrictions has been added

--- a/Phase 3/AngularJs/WebContent/games.html
+++ b/Phase 3/AngularJs/WebContent/games.html
@@ -38,6 +38,8 @@
 	              </div>
               </div>
             </nav>
+            
+            <center><p id="notColl">You are not a collaborator in this game!</p></center>
             <div class="row">
                 <div class="col-xs-6 col-md-4 col-lg-3" ng-repeat="game in games">
                 	
